--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -13,9 +13,9 @@ jobs:
       postgres:
         image: postgres:13
         env:
-          POSTGRES_DB: laravel
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
+          DB_DATABASE: acc_communication
+          DB_USERNAME: postgres
+          DB_PASSWORD: 12345678
         ports:
           - 5432:5432
         options: >-
