--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=1postgres
 DB_PORT=5432
-DB_DATABASE=acc_communication
-DB_USERNAME=postgres
-DB_PASSWORD=12345678
+DB_DATABASE: laravel
+DB_USERNAME: user
+DB_PASSWORD: password
 
 
 BROADCAST_DRIVER=log
