--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=1postgres
 DB_PORT=5432
-DB_DATABASE:laravel
-DB_USERNAME:user
-DB_PASSWORD:password
+DB_DATABASE=laravel
+DB_USERNAME=user
+DB_PASSWORD=password
 
 
 BROADCAST_DRIVER=log
