--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_REQUESTS_PER_MINUTE=60
+CURRENT_USER_ID=11
+UID='frrrtr'
+UDID='ffggf'
+COMPANY_ID=1
